--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -405,9 +405,9 @@ ru:
       add_suscribers: "Кто будет следить за этим обсуждением?"
       cant_notify: "Это публичный проект. Чтобы избежать нежелательных сообщений, мы не показываем список пользователей, которым можно отправить email."
       invite_users: "Вы единственный участник этого проекта!"
-      no_users_yet: "В споре рождается истина. <a href='%{invite_link}'>Пригласите участников</a> в этот проект, чтобы они могли участвовать в обсуждении и следить за обновлениями."
+      no_users_yet_html: "В споре рождается истина. <a href='%{invite_link}'>Пригласите участников</a> в этот проект, чтобы они могли участвовать в обсуждении и следить за обновлениями."
       people_all: "Все участники проекта"
-      subscribe_note: "Эти люди будут уведомлены по электронной почте о комментариях.<br/>Они могут отменить подписку в любой момент."
+      subscribe_note_html: "Эти люди будут уведомлены по электронной почте о комментариях.<br/>Они могут отменить подписку в любой момент."
   countries: 
     AC: "Остров Вознесения"
     AD: Андорра
@@ -918,16 +918,13 @@ ru:
       invalid_code: "Неверный код приглашения"
     fields: 
       user_or_email: "Введите логин или электронную почту участника:"
-    group_invitation: 
-      invited_email: "%{inviter} приглашает <b>%{email}</b> присоединиться к группе."
-      invited_user: "%{inviter} приглашает <b>%{invitee}</b> присоединиться к группе."
     index_user: 
       no_invitations: "Нет приглашений в очереди."
       title: "Приглашения в очереди"
     invitation: 
       discard: "Отменить приглашение"
       invited_email: "%{inviter} приглашает <b>%{email}</b> участвовать в проекте."
-      invited_user: "%{inviter} приглашает <b>%{invitee}</b> участвовать в проекте."
+      invited_user_html: "%{inviter} приглашает <b>%{invitee}</b> участвовать в проекте."
       pending: "Приглашение было послано этому пользователю, но он ещё не подтвердил его."
       resend: "Послать приглашение заново"
       time_ago: "(%{time_ago_in_words} назад)"
@@ -936,7 +933,7 @@ ru:
         title: Введите
       title: "В поле имя пользователя/почтовый ящик, используйте либо имена пользователей, либо адреса электронной почты. Например:"
       to_invite: 
-        not_example: "(NOT <span class=\"mention\">@fred</span> или <span class=\"mention\">@lisa</span>)"
+        not_example_html: "(NOT <span class=\"mention\">@fred</span> или <span class=\"mention\">@lisa</span>)"
         title: "Для приглашения"
     pending: 
       invited_to_join: "%{by} приглашает вас участвовать в проекте %{project}."
@@ -1099,12 +1096,12 @@ ru:
     user_exists: "Этот профиль %{provider} еще не связан с каким-либо аккаунтом."
     user_exists_instruction: "Если у вас уже есть аккаунт Teambox, войдите, чтобы связать его автоматически с вашим профилем %{provider}"
     user_exists_is_not_yours: "Если вы не владелец '%{account}', %{signup_for_a_new_account}."
-    your_account_is_linked: "Ваш профиль %{provider} <strong>связан</strong> с Teambox."
-    your_account_is_not_linked: "Ваш профиль %{provider} <strong>не связан</strong> с Teambox."
+    your_account_is_linked_html: "Ваш профиль %{provider} <strong>связан</strong> с Teambox."
+    your_account_is_not_linked_html: "Ваш профиль %{provider} <strong>не связан</strong> с Teambox."
   organizations: 
     billing: 
-      billing_area: "Вы можете получить доступ к счетам, понизить план или изменить параметры оплаты в любое время в<a href='%{link}'>разделе биллинга</a>."
-      billing_email: "Электронная почта для биллинга <em> Мы вышлем счета по этому адресу</em>"
+      billing_area_html: "Вы можете получить доступ к счетам, понизить план или изменить параметры оплаты в любое время в<a href='%{link}'>разделе биллинга</a>."
+      billing_email_html: "Электронная почта для биллинга <em> Мы вышлем счета по этому адресу</em>"
       current_plan: "Ваш текущий план"
       downgrade: "Понизить тарифный план"
       plan: План
@@ -1114,13 +1111,13 @@ ru:
       submit: "Обновить e-mail для биллинга"
       suggested_upgrade: 
         for_only: "$%{price} в месяц"
-        get_projects: "До <b>%{number} проектов</b>"
-        get_storage: "До <b>%{number}</b>"
+        get_projects_html: "До <b>%{number} проектов</b>"
+        get_storage_html: "До <b>%{number}</b>"
         upgrade_to: "Обновить до %{plan}"
       upgrade: "Обновить сейчас!"
       yearly_plans: 
-        save_with_yearly_plans: "<b>Скидка 20%</b>. Вы также можете подписаться на любой годовой план и <b>получить два месяца бесплатно</b>."
-        signup_links: "Подпишитесь на год на <a href='%{corporate}'>Корпоративный ($2990)</a>, <a href='%{pro}'>Профессиональный ($990)</a>, <a href='%{basic}'>Базовый ($290)</a> или <a href='%{personal}'>Персональный ($120)</a>."
+        save_with_yearly_plans_html: "<b>Скидка 20%</b>. Вы также можете подписаться на любой годовой план и <b>получить два месяца бесплатно</b>."
+        signup_links_html: "Подпишитесь на год на <a href='%{corporate}'>Корпоративный ($2990)</a>, <a href='%{pro}'>Профессиональный ($990)</a>, <a href='%{basic}'>Базовый ($290)</a> или <a href='%{personal}'>Персональный ($120)</a>."
     column: 
       admin_projects: "Управление проектами"
       admin_users: "Управление пользователями"
@@ -1132,8 +1129,8 @@ ru:
       confirm: "Я понимаю, что удаление этой организации является необратимым, и все материалы, связанные с этой организацией, будут потеряны."
       delete: "Удалить данную организацию"
       deleted: "Вы удалили организацию"
-      go_delete_some_projects: "Вам необходимо <a href='%{link}'>удалить или переместить </a> все проекты этой организации перед удалением."
-      go_downgrade_to_free_plan: "Вам необходимо <a href='%{link}'>отписаться</a>  от оплачиваемого плана перед удалением организации. Вы можете понизить свой аккаунт до бесплатного в разделе <a href='%{link}'>биллинга</a>."
+      go_delete_some_projects_html: "Вам необходимо <a href='%{link}'>удалить или переместить </a> все проекты этой организации перед удалением."
+      go_downgrade_to_free_plan_html: "Вам необходимо <a href='%{link}'>отписаться</a>  от оплачиваемого плана перед удалением организации. Вы можете понизить свой аккаунт до бесплатного в разделе <a href='%{link}'>биллинга</a>."
       need_to_be_admin: "Вы должны быть администратором для удаления этой организации"
       not_paid_plan: "Вы не можете удалить организацию с оплачиваемым планом."
       not_with_projects: "Вы не можете удалить эту организацию, так как она содержит проекты"
@@ -1146,17 +1143,17 @@ ru:
       submit: "Сохранить изменения"
       there_are: Существует
     external_view: 
-      create_your_own_org: "Однако, вы сможете <a href='%{link}'>создавать свои собственные организации</a> для ваших проектов."
+      create_your_own_org_html: "Однако, вы сможете <a href='%{link}'>создавать свои собственные организации</a> для ваших проектов."
       request_permission: "Для доступа к этой организации, необходимо запросить разрешение у администраторов:"
       title: "%{name}"
       you_cant_access: "У вас нет прав для доступа или изменения этой организации."
     fields: 
       description: "HTML, который будет отображаться на странице входа <a href=\"http://help.teambox.com/faqs/more-ways-to-access-teambox/customize-organizations\">Узнайте, как этим пользоваться</a>"
-      domain: "Домен <em>Опционально. Вы можете использовать свой собственный домен для Вашей организации, посмотрите<a href='http://help.teambox.com/faqs/more-ways-to-access-teambox/custom-domain' title='Как использовать собственный домен для организации в Teambox'>документацию</a>.</em>"
-      logo: "Логотип <em>В идеале должен быть 134x36 пикселей </em>"
+      domain_html: "Домен <em>Опционально. Вы можете использовать свой собственный домен для Вашей организации, посмотрите<a href='http://help.teambox.com/faqs/more-ways-to-access-teambox/custom-domain' title='Как использовать собственный домен для организации в Teambox'>документацию</a>.</em>"
+      logo_html: "Логотип <em>В идеале должен быть 134x36 пикселей </em>"
       name: "Имя организации"
       name_placeholder: "Ваша организация"
-      permalink: "Короткий код организации <em>без пробелов. Будет использоваться для формирования веб-адреса. </em>"
+      permalink_html: "Короткий код организации <em>без пробелов. Будет использоваться для формирования веб-адреса. </em>"
     index: 
       about: 
         explain1: "Организация позволяет вам группировать проекты и пользователей под единой торговой маркой."
@@ -1182,14 +1179,14 @@ ru:
         one: "Один проект"
         other: "%{count} проектов"
       participant: участник
-      you_are: "Вы <strong>%{role}</strong> в данной организации"
+      you_are_html: "Вы <strong>%{role}</strong> в данной организации"
     projects: 
       active_projects: "Активные проекты"
       archived_projects: "Проекты в архиве"
-      instructions: "Это проекты данной организации. Если вы администратор, вы можете перевести проекты в <a href='%{organizations_link}'>другие организации</a> в \"Настройках проекта\"."
+      instructions_html: "Это проекты данной организации. Если вы администратор, вы можете перевести проекты в <a href='%{organizations_link}'>другие организации</a> в \"Настройках проекта\"."
       last_activity: "последние действия %{date}"
       new_project: "Новый проект"
-      role: "вы <strong>%{role}</strong>"
+      role_html: "вы <strong>%{role}</strong>"
       settings: настройки
       title: "организация '%{name}'"
     usage: 
@@ -1345,9 +1342,9 @@ ru:
       name_example: "Имя проекта"
       new: 
         choose_organization: 
-          choose_org: "Организация <em>Какой организации принадлежит этот проект?</em>"
-          new_org_name: "Название организации <em>Позднее вы сможете добавлять другие проектов в эту же организацию</em>"
-          or_create_a_new_org: "или создать <a href='%{link}'>новую организацию</a>"
+          choose_org_html: "Организация <em>Какой организации принадлежит этот проект?</em>"
+          new_org_name_html: "Название организации <em>Позднее вы сможете добавлять другие проектов в эту же организацию</em>"
+          or_create_a_new_org_html: "или создать <a href='%{link}'>новую организацию</a>"
         time_tracking_docs: "Узнать больше."
       organization: Организация
       organizations: 
@@ -1356,13 +1353,13 @@ ru:
         upgrade_organization: "Вам необходимо обновить эту организацию."
       owner: Владелец
       owner_description: "Владелец — это главный ответственный за проект. Его нельзя убрать из проекта, пока владение не будет передано другому пользователю."
-      permalink: Адрес
+      permalink_html: Адрес
       permalink_description: "Это будет адресом вашего проекта. Старайтесь сделать его как можно короче. Не пользуйтесь пробелами."
       public_project_html: "Публичный проект.  <em>Любой сможет просмотреть и присоединиться к нему на <a href='/public'>странице публичных проектов</a>.</em>"
       select_an_organization: "Выберите организацию"
       settings: 
         manage_organizations: "Управление организациями."
-        you_cant_transfer_this_project: "Этот проект принадлежит организации <b>%{organization}</b>. Вы не имеете права перемещать его."
+        you_cant_transfer_this_project_html: "Этот проект принадлежит организации <b>%{organization}</b>. Вы не имеете права перемещать его."
       tracks_time_html: "Включить учет времени"
     index: 
       archived: "Показать %{count} заархивированные проекты..."
@@ -1390,11 +1387,11 @@ ru:
       submit: "Создать проект и пригласить участников"
       title: "Создать проект"
       upgrade: 
-        to_2: "<a href='{{link}}'>Обновите аккаунт сейчас</a>, чтобы создать <b> до {{projects}}  проектов</b>, хранить до <b>{{storage}} Гб</b> файлов и использовать <b>панель поиска по всем проектам</b>."
+        to_2_html: "<a href='{{link}}'>Обновите аккаунт сейчас</a>, чтобы создать <b> до {{projects}}  проектов</b>, хранить до <b>{{storage}} Гб</b> файлов и использовать <b>панель поиска по всем проектам</b>."
       you_can_create_more: 
         one: "Вы можете создать еще один проект с вашим текущим планом."
         other: "Вы можете создать еще {{count}} проектов с вашим текущим планом."
-        zero: "Вы больше не можете создавать проекты.<br/>Максимальное число проектов в текущем плане {{max}}."
+        zero_html: "Вы больше не можете создавать проекты.<br/>Максимальное число проектов в текущем плане {{max}}."
     new_primer: 
       define1_html: "Проект — это группа, состоящая из ваших коллег."
       define2_html: "Внутри проекта каждый участник может:"
@@ -1409,8 +1406,8 @@ ru:
       limited: "У вас бесплатный аккаунт, вы можете загрузить только до 50 МБ файлов в этот проект."
       upgrade: "Обновите свой аккаунт прямо сейчас!"
     not_in_project: 
-      explain_admin: "Для того, чтобы просматривать этот проект, вы должны присоединиться к нему. Это даст вам доступ к обсуждениям, задачам, страницам и файлам. Вы можете сделать это, потому что вы администратор организации <b>%{organization}</b>."
-      explain_public: "Для того, чтобы просматривать этот проект, вы должны присоединиться к нему. Это даст вам доступ к обсуждениям, задачам, страницам и файлам. Вы можете сделать это, потому что это <b>публичный проект</b>."
+      explain_admin_html: "Для того, чтобы просматривать этот проект, вы должны присоединиться к нему. Это даст вам доступ к обсуждениям, задачам, страницам и файлам. Вы можете сделать это, потому что вы администратор организации <b>%{organization}</b>."
+      explain_public_html: "Для того, чтобы просматривать этот проект, вы должны присоединиться к нему. Это даст вам доступ к обсуждениям, задачам, страницам и файлам. Вы можете сделать это, потому что это <b>публичный проект</b>."
       join: "Присоединиться к проекту"
       not_allowed: "Это частный проект, у вас нет прав доступа к нему."
       title: "Присоединиться к проекту '%{project}'?"
@@ -1493,7 +1490,7 @@ ru:
     archived_projects: 
       archived_projects: "Заархивированные проекты"
     chrome_frame: 
-      enhance: "Усовершенствуйте свой Teambox с Google Chrome Frame. Кликните <a href=\"%{link}\" target=\\\"_blank\\\">сюда</a>, чтобы установить приложение."
+      enhance_html: "Усовершенствуйте свой Teambox с Google Chrome Frame. Кликните <a href=\"%{link}\" target=\\\"_blank\\\">сюда</a>, чтобы установить приложение."
     footer: 
       help: Помощь
       mobile: "Мобильная версия"
@@ -1509,10 +1506,10 @@ ru:
     instructions: 
       send_email: "Отправить новый комментарий по электронной почте..."
       send_email_conversations: "Добавить новое обсуждение по электронной почте..."
-      send_email_help_conversation: "Чтобы опубликовать новый комментарий к этому обсуждению отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут публиковать сообщения."
-      send_email_help_conversations: "Чтобы создать новое обсуждение, отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a> с темой в качестве заголовка и сообщением в качестве комментария. Только члены проекта могут создавать обсуждение."
-      send_email_help_project: "Чтобы опубликовать новый комментарий на странице деятельности этого проекта,  отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут публиковать сообщения."
-      send_email_help_task: "Чтобы опубликовать новый комментарий к этой задаче, отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут комментировать задачи."
+      send_email_help_conversation_html: "Чтобы опубликовать новый комментарий к этому обсуждению отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут публиковать сообщения."
+      send_email_help_conversations_html: "Чтобы создать новое обсуждение, отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a> с темой в качестве заголовка и сообщением в качестве комментария. Только члены проекта могут создавать обсуждение."
+      send_email_help_project_html: "Чтобы опубликовать новый комментарий на странице деятельности этого проекта,  отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут публиковать сообщения."
+      send_email_help_task_html: "Чтобы опубликовать новый комментарий к этой задаче, отправьте сообщение по электронной почте <a href=\"mailto:%{email}\">%{email}</a>. Только члены проекта могут комментировать задачи."
       subscribe_to_calendars: "Подписаться на календари..."
       subscribe_to_feeds: "Подписаться на ленту новостей..."
     navigation: 
@@ -1559,7 +1556,7 @@ ru:
       tour: Вступление
       users: "Наши пользователи"
     strip: 
-      archived: "Этот проект заархивирован. Чтобы редактировать или комментировать проект, вы должны разархивировать его на <a href='%{link}'>странице настроек проекта</a>"
+      archived_html: "Этот проект заархивирован. Чтобы редактировать или комментировать проект, вы должны разархивировать его на <a href='%{link}'>странице настроек проекта</a>"
     task_navigation: 
       all_tasks: "Все задачи"
       everybodys_tasks: "Общие задачи"
@@ -1628,7 +1625,7 @@ ru:
       other_views: "Другие представления"
       subscribe: "Подписаться на новости"
     destroy_message: 
-      deleted: "Список задач <b>%{name}</b> удалён!"
+      deleted_html: "Список задач <b>%{name}</b> удалён!"
     edit: 
       submit: "Обновить список задач"
     errors: 
@@ -1705,13 +1702,13 @@ ru:
       reopen: "Открыть эту задачу заново"
       you_are_done: "Кажется, мы покончили с этой задачей!"
     archive_message: 
-      archived: "Задача <b>%{name}</b> заархивирована!"
+      archived_html: "Задача <b>%{name}</b> заархивирована!"
     assigned: 
       assigned_to: "Назначена %{user}"
       myself: "Назначенные мне (%{user})"
     create: "Добавить задачу"
     destroy_message: 
-      deleted: "Задача <b>%{name}</b> удалена!"
+      deleted_html: "Задача <b>%{name}</b> удалена!"
     due_on: 
       due_on: до
       today: Сегодня
@@ -1771,7 +1768,7 @@ ru:
   uploads: 
     comment_upload_link: Вложение
     form: 
-      description: "Название <i>(не обяз.)</i>"
+      description_html: "Название <i>(не обяз.)</i>"
       max_size: "Размер файла не может превышать %{mb}"
       presence: "Нельзя загружать пустые файлы"
       select_file: "Выбрать файл"
@@ -1930,17 +1927,17 @@ ru:
             * неупорядоченный список
             * оставьте пустые строки вокруг
       to_see_this: 
-        bold_text: "<strong style=\"font-weight: bold\">жирный</strong> текст"
-        header: "<h3 style=\"font-size:18px\">Заголовок</h3>"
-        image: "<img src=\"http://www.w3.org/Icons/valid-html401\">"
-        italic_text: "<i>курсив</i> текст"
-        link: "<a href=\"http://www.teambox.com\">Ссылка на что-нибудь</a>"
-        ordered_list: |-
+        bold_text_html: "<strong style=\"font-weight: bold\">жирный</strong> текст"
+        header_html: "<h3 style=\"font-size:18px\">Заголовок</h3>"
+        image_html: "<img src=\"http://www.w3.org/Icons/valid-html401\">"
+        italic_text_html: "<i>курсив</i> текст"
+        link_html: "<a href=\"http://www.teambox.com\">Ссылка на что-нибудь</a>"
+        ordered_list_html: |-
             <li>упорядоченный список</li>
             <li>оставьте пустые строки!</li>
-        smaller_header: "<h4 style=\"font-size:14px\">Маленький заголовок</h4>"
-        title: "Чтобы увидеть это"
-        unordered_list: |-
+        smaller_header_html: "<h4 style=\"font-size:14px\">Маленький заголовок</h4>"
+        title_html: "Чтобы увидеть это"
+        unordered_list_html: |-
             <li>неупорядоченный список</li>
             <li>оставьте пустые строки вокруг</li>
     unconfirmed_email: 
